--- a/pages/signup.html
+++ b/pages/signup.html
@@ -101,21 +101,21 @@
                     <form role="form">
                         <hr>
                         <div class="row">
-                            <div class="form-group col-md-6 col-lg-4">
+                            <div class="form-group col-sm-4 col-md-4 col-lg-4">
                                 <label>Full Name</label>
                                 <input type="text" class="form-control" placeholder="enter your full name">
                             </div>
-                            <div class="form-group col-md-6 col-lg-4">
+                            <div class="form-group col-sm-4 col-md-4 col-lg-4">
                                 <label>Address</label>
                                 <input type="email" class="form-control" placeholder="enter your current address">
                             </div>
-                            <div class="form-group col-md-6 col-lg-4">
+                            <div class="form-group col-sm-4 col-md-4 col-lg-4">
                                 <label>City</label>
                                 <input type="tel" class="form-control" placeholder="enter the name of your city">
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-md-3 col-lg-2">
+                            <div class="form-group col-sm-3 col-md-3 col-lg-2">
                                 <label>Province</label>
                                 <select class="form-control" name="province" id="province">
                                     <option>Select below</option>
@@ -134,51 +134,51 @@
                                     <option value="13">YT</option>
                                 </select>
                             </div>
-                            <div class="form-group col-md-3 col-lg-2">
+                            <div class="form-group col-sm-2 col-md-3 col-lg-2">
                                 <label>Postal Code</label>
                                 <input type="email" class="form-control" placeholder="enter postal code">
                             </div>
-                            <div class="form-group col-md-3 col-lg-4">
+                            <div class="form-group col-sm-3 col-md-3 col-lg-4">
                                 <label>Phone Number</label>
                                 <input type="tel" class="form-control" placeholder="613 111 2233">
                             </div>
-                            <div class="form-group col-md-3 col-lg-4">
+                            <div class="form-group col-sm-4 col-md-3 col-lg-4">
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" placeholder="enter valid email">
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-md-3 col-lg-4">
                                 <label>Cardholder's Name</label>
                                 <input type="text" class="form-control" placeholder="as printed on the card">
                             </div>
-                            <div class="form-group col-lg-2">
+                            <div class="form-group col-md-3 col-lg-2">
                                 <label>Credit Card Number</label>
                                 <input type="email" class="form-control" placeholder="XXXXXXXXXXXXXXXX">
                             </div>
-                            <div class="form-group col-lg-2">
+                            <div class="form-group col-md-2 col-lg-2">
                                 <label>Card Type</label>
-                                <select class="form-control" name="province" id="province">
+                                <select class="form-control" name="card-type" id="card-type">
                                     <option>Select below</option>
                                     <option value="01">Visa</option>
                                     <option value="02">MasterCard</option>
                                     <option value="03">American Express</option>
                                 </select>
                             </div>
-                            <div class="form-group col-lg-2">
+                            <div class="form-group col-md-2 col-lg-2">
                                 <label>CVV</label>
                                 <input type="tel" class="form-control" placeholder="security code">
                             </div>
-                            <div class="form-group col-lg-2">
+                            <div class="form-group col-md-2 col-lg-2">
                                 <label>Expiration Date</label>
                                 <input type="tel" class="form-control" placeholder="MM-YY">
                             </div>
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="form-group col-lg-4 col-lg-offset-4">
+                            <div class="form-group col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                                 <label>Please select one of the option plans below:</label>
-                                <select class="form-control" name="province" id="province">
+                                <select class="form-control" name="option" id="option">
                                     <option>Choose from 3 available plans</option>
                                     <option value="01">Plan A: Golden Decade</option>
                                     <option value="02">Plan B: 30 Year Long Adventure</option>
