MAD9013 Final - Bootstrap Sports Site

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="row header-nonbs locations">
+    <div class="header-nonbs locations">
         <div class="brand">World's Cableway Racing League</div>
         <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
