--- a/pages/signup.html
+++ b/pages/signup.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="row header-nonbs signup">
+    <div class="header-nonbs signup">
         <div class="brand">World's Cableway Racing League</div>
         <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
@@ -78,20 +78,23 @@
                     <hr>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, vitae, distinctio, possimus repudiandae cupiditate ipsum excepturi dicta neque eaque voluptates tempora veniam esse earum sapiente optio deleniti consequuntur eos voluptatem.</p>
                     <div class="row text-center">
-                        <div class="col-md-4 col-lg-4">
+                        <div class="col-sm-4 col-md-4 col-lg-4">
                             <h2><small>Plan A</small></h2>
                             <h3>Golden Decade</h3>
                             <h2><small>CAD 29,999.99</small></h2>
+                            <hr>
                         </div>
-                        <div class="col-md-4 col-lg-4">
+                        <div class="col-sm-4 col-md-4 col-lg-4">
                             <h2><small>Plan B</small></h2>
                             <h3>30-Year Long Adventure</h3>
                             <h2><small>CAD 49,999.99</small></h2>
+                            <hr>
                         </div>
-                        <div class="col-md-4 col-lg-4">
+                        <div class="col-sm-4 col-md-4 col-lg-4">
                             <h2><small>Plan C</small></h2>
                             <h3>Lifetime Valour</h3>
                             <h2><small>CAD 99,999.99</small></h2>
+                            <hr>
                         </div>
                     </div>
                     <hr>
@@ -134,7 +137,7 @@
                                     <option value="13">YT</option>
                                 </select>
                             </div>
-                            <div class="form-group col-sm-2 col-md-3 col-lg-2">
+                            <div class="form-group col-sm-3 col-md-3 col-lg-2">
                                 <label>Postal Code</label>
                                 <input type="email" class="form-control" placeholder="enter postal code">
                             </div>
@@ -142,21 +145,21 @@
                                 <label>Phone Number</label>
                                 <input type="tel" class="form-control" placeholder="613 111 2233">
                             </div>
-                            <div class="form-group col-sm-4 col-md-3 col-lg-4">
+                            <div class="form-group col-sm-3 col-md-3 col-lg-4">
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" placeholder="enter valid email">
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-md-3 col-lg-4">
+                            <div class="form-group col-sm-6 col-md-3 col-lg-4">
                                 <label>Cardholder's Name</label>
                                 <input type="text" class="form-control" placeholder="as printed on the card">
                             </div>
-                            <div class="form-group col-md-3 col-lg-2">
+                            <div class="form-group col-sm-6 col-md-3 col-lg-2">
                                 <label>Credit Card Number</label>
                                 <input type="email" class="form-control" placeholder="XXXXXXXXXXXXXXXX">
                             </div>
-                            <div class="form-group col-md-2 col-lg-2">
+                            <div class="form-group col-sm-4 col-md-2 col-lg-2">
                                 <label>Card Type</label>
                                 <select class="form-control" name="card-type" id="card-type">
                                     <option>Select below</option>
@@ -165,21 +168,21 @@
                                     <option value="03">American Express</option>
                                 </select>
                             </div>
-                            <div class="form-group col-md-2 col-lg-2">
+                            <div class="form-group col-sm-4 col-md-2 col-lg-2">
                                 <label>CVV</label>
                                 <input type="tel" class="form-control" placeholder="security code">
                             </div>
-                            <div class="form-group col-md-2 col-lg-2">
+                            <div class="form-group col-sm-4 col-md-2 col-lg-2">
                                 <label>Expiration Date</label>
                                 <input type="tel" class="form-control" placeholder="MM-YY">
                             </div>
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="form-group col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+                            <div class="form-group col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                                 <label>Please select one of the option plans below:</label>
                                 <select class="form-control" name="option" id="option">
-                                    <option>Choose from 3 available plans</option>
+                                    <option>Choose from the 3 available plans</option>
                                     <option value="01">Plan A: Golden Decade</option>
                                     <option value="02">Plan B: 30 Year Long Adventure</option>
                                     <option value="03">Plan C: Lifetime Valour</option>
