--- a/pages/standings.html
+++ b/pages/standings.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="row header-nonbs standings">
+    <div class="header-nonbs standings">
         <div class="brand">World's Cableway Racing League</div>
         <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
@@ -76,41 +76,41 @@
                     </h2>
             <hr>
             <tr>
-                <th>COMPLEXITY</th>
-                <th>GAME NAME</th>
-                <th>POSITION</th>
+                <th>#</th>
+                <th>GAME</th>
+                <th>PLACE</th>
                 <th>SCORE</th>
                 <th>RUNS</th>
-                <th>TOTAL NO. OF POINTS</th>
+                <th>POINTS</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>Level 7</th>
+                <th>7</th>
                 <td>DANCE OF THE FOREST</td>
                 <td>7</td>
                 <td>9</td>
                 <td>2</td>
-                <td>43</td>
+                <td>19.4</td>
             </tr>
             <tr>
-                <th>Level 6</th>
+                <th>6</th>
                 <td>RACING ON THE STREETS</td>
                 <td>3</td>
                 <td>4</td>
                 <td>1</td>
-                <td>41</td>
+                <td>12.7</td>
             </tr>
             <tr>
-                <th>Level 5</th>
+                <th>5</th>
                 <td>INDEPENDENT SUMMITS</td>
                 <td>2</td>
                 <td>6</td>
                 <td>2</td>
-                <td>39</td>
+                <td>33.5</td>
             </tr>
             <tr>
-                <th>Level 4</th>
+                <th>4</th>
                 <td>WHATEVER FRIEND YOU CHOOSE</td>
                 <td>1</td>
                 <td>9</td>
@@ -118,7 +118,7 @@
                 <td>27.4</td>
             </tr>
             <tr>
-                <th>Level 3</th>
+                <th>3</th>
                 <td>IN BETWEEN OBSTACLES</td>
                 <td>29</td>
                 <td>12</td>
@@ -126,7 +126,7 @@
                 <td>14.6</td>
             </tr>
             <tr>
-                <th>Level 2</th>
+                <th>2</th>
                 <td>AFRAID OF NO ONE</td>
                 <td>26</td>
                 <td>15</td>
@@ -134,7 +134,7 @@
                 <td>21.2</td>
             </tr>
             <tr>
-                <th>Level 1</th>
+                <th>1</th>
                 <td>RELENTLESS 7</td>
                 <td>22</td>
                 <td>19</td>
@@ -142,7 +142,7 @@
                 <td>17.9</td>
             </tr>
             <tr>
-                <th>Level 0</th>
+                <th>0</th>
                 <td>FREE FALL</td>
                 <td>15</td>
                 <td>19</td>
@@ -159,17 +159,17 @@
                     </h2>
             <hr>
             <tr>
-                <th>COMPLEXITY</th>
-                <th>GAME NAME</th>
-                <th>POSITION</th>
+                <th>#</th>
+                <th>GAME</th>
+                <th>PLACE</th>
                 <th>SCORE</th>
                 <th>RUNS</th>
-                <th>TOTAL NO. OF POINTS</th>
+                <th>POINTS</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>Level 7</th>
+                <th>7</th>
                 <td>RUN FOR THE TOP</td>
                 <td>41</td>
                 <td>0</td>
@@ -177,7 +177,7 @@
                 <td>43</td>
             </tr>
             <tr>
-                <th>Level 6</th>
+                <th>6</th>
                 <td>RACE OR DIE</td>
                 <td>40</td>
                 <td>4</td>
@@ -185,7 +185,7 @@
                 <td>41</td>
             </tr>
             <tr>
-                <th>Level 5</th>
+                <th>5</th>
                 <td>TRY OR FLY</td>
                 <td>37</td>
                 <td>6</td>
@@ -193,7 +193,7 @@
                 <td>39</td>
             </tr>
             <tr>
-                <th>Level 4</th>
+                <th>4</th>
                 <td>NO RULES APPLY</td>
                 <td>32</td>
                 <td>9</td>
@@ -201,7 +201,7 @@
                 <td>36</td>
             </tr>
             <tr>
-                <th>Level 3</th>
+                <th>3</th>
                 <td>GET OUT AND ABOUT</td>
                 <td>29</td>
                 <td>12</td>
@@ -209,7 +209,7 @@
                 <td>30</td>
             </tr>
             <tr>
-                <th>Level 2</th>
+                <th>2</th>
                 <td>NO MORE MR NICE CABLERACER</td>
                 <td>26</td>
                 <td>15</td>
@@ -217,7 +217,7 @@
                 <td>28</td>
             </tr>
             <tr>
-                <th>Level 1</th>
+                <th>1</th>
                 <td>SNOWLESS UPHILL RUN</td>
                 <td>22</td>
                 <td>19</td>
@@ -225,7 +225,7 @@
                 <td>23</td>
             </tr>
             <tr>
-                <th>Level 0</th>
+                <th>0</th>
                 <td>POINT OF NO RETURN</td>
                 <td>15</td>
                 <td>19</td>
@@ -242,17 +242,17 @@
                     </h2>
             <hr>
             <tr>
-                <th>COMPLEXITY</th>
-                <th>GAME NAME</th>
-                <th>POSITION</th>
+                <th>#</th>
+                <th>GAME</th>
+                <th>PLACE</th>
                 <th>SCORE</th>
                 <th>RUNS</th>
-                <th>TOTAL NO. OF POINTS</th>
+                <th>POINTS</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>Level 7</th>
+                <th>7</th>
                 <td>FIVE MINUTES FROM THE POLE</td>
                 <td>39</td>
                 <td>2</td>
@@ -260,7 +260,7 @@
                 <td>41</td>
             </tr>
             <tr>
-                <th>Level 6</th>
+                <th>6</th>
                 <td>OVER THE POND</td>
                 <td>37</td>
                 <td>3</td>
@@ -268,7 +268,7 @@
                 <td>40</td>
             </tr>
             <tr>
-                <th>Level 5</th>
+                <th>5</th>
                 <td>THE GREAT SILK CABLEWAY</td>
                 <td>30</td>
                 <td>9</td>
@@ -276,7 +276,7 @@
                 <td>32</td>
             </tr>
             <tr>
-                <th>Level 4</th>
+                <th>4</th>
                 <td>AMERICAN EXPRESS</td>
                 <td>29</td>
                 <td>11</td>
@@ -284,7 +284,7 @@
                 <td>31</td>
             </tr>
             <tr>
-                <th>Level 3</th>
+                <th>3</th>
                 <td>NORTHERN UPRISAL</td>
                 <td>23</td>
                 <td>15</td>
@@ -292,7 +292,7 @@
                 <td>26</td>
             </tr>
             <tr>
-                <th>Level 2</th>
+                <th>2</th>
                 <td>NO CABLES FOR THE TIE-IN</td>
                 <td>18</td>
                 <td>19</td>
@@ -300,7 +300,7 @@
                 <td>23</td>
             </tr>
             <tr>
-                <th>Level 1</th>
+                <th>1</th>
                 <td>IMPLAUSIBLE BATTLE</td>
                 <td>16</td>
                 <td>23</td>
@@ -308,7 +308,7 @@
                 <td>18</td>
             </tr>
             <tr>
-                <th>Level 0</th>
+                <th>0</th>
                 <td>THE PENULTIMATE CONUNDRUM</td>
                 <td>13</td>
                 <td>33</td>
