MAD9013 Final - Bootstrap Sports Site

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -12,7 +12,7 @@
     <title>World's Cableway Racing League</title>
 
     <!-- Bootstrap CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- My CSS -->
     <link href="../css/main.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="header-nonbs locations">
+    <div class="header-nonbs locations hidden-xs">
         <div class="brand">World's Cableway Racing League</div>
         <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand tert" href="index.html">Cableway Racing League</a>
+                <a class="navbar-brand" href="index.html">Cableway Racing League</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
