--- a/pages/signup.html
+++ b/pages/signup.html
@@ -12,7 +12,7 @@
     <title>World's Cableway Racing League</title>
 
     <!-- Bootstrap CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- My CSS -->
     <link href="../css/main.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="header-nonbs signup">
+    <div class="header-nonbs signup hidden-xs">
         <div class="brand">World's Cableway Racing League</div>
         <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
@@ -94,7 +94,7 @@
                             <h2><small>Plan C</small></h2>
                             <h3>Lifetime Valour</h3>
                             <h2><small>CAD 99,999.99</small></h2>
-                            <hr>
+                            <hr class="hidden-xs">
                         </div>
                     </div>
                     <hr>
@@ -177,7 +177,7 @@
                                 <input type="tel" class="form-control" placeholder="MM-YY">
                             </div>
                         </div>
-                        <hr>
+                        <hr class="hidden-xs">
                         <div class="row">
                             <div class="form-group col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                                 <label>Please select one of the option plans below:</label>
