--- a/pages/standings.html
+++ b/pages/standings.html
@@ -12,7 +12,7 @@
     <title>World's Cableway Racing League</title>
 
     <!-- Bootstrap CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- My CSS -->
     <link href="../css/main.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="header-nonbs standings">
+    <div class="header-nonbs standings hidden-xs">
         <div class="brand">World's Cableway Racing League</div>
         <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-brand tert" href="index.html">Cableway Racing League</a>
+                <a class="navbar-brand" href="index.html">Cableway Racing League</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -68,25 +68,25 @@
     <div class="container">
         <div class="row">
             <div class="box text-center">
-                <table class="table table-hover text-center">
+                <table class="table table-hover">
         <thead>
             <hr>
-            <h2 class="intro-text text-center">
+            <h2 class="intro-text">
                         <strong>Local Races</strong>
                     </h2>
             <hr>
             <tr>
-                <th>#</th>
-                <th>GAME</th>
-                <th>PLACE</th>
-                <th>SCORE</th>
-                <th>RUNS</th>
-                <th>POINTS</th>
+                <th class="text-center">#</th>
+                <th class="text-center">GAME</th>
+                <th class="text-center">PLACE</th>
+                <th class="text-center">SCORE</th>
+                <th class="text-center">RUNS</th>
+                <th class="text-center">POINTS</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>7</th>
+                <th class="text-center">7</th>
                 <td>DANCE OF THE FOREST</td>
                 <td>7</td>
                 <td>9</td>
@@ -94,7 +94,7 @@
                 <td>19.4</td>
             </tr>
             <tr>
-                <th>6</th>
+                <th class="text-center">6</th>
                 <td>RACING ON THE STREETS</td>
                 <td>3</td>
                 <td>4</td>
@@ -102,7 +102,7 @@
                 <td>12.7</td>
             </tr>
             <tr>
-                <th>5</th>
+                <th class="text-center">5</th>
                 <td>INDEPENDENT SUMMITS</td>
                 <td>2</td>
                 <td>6</td>
@@ -110,7 +110,7 @@
                 <td>33.5</td>
             </tr>
             <tr>
-                <th>4</th>
+                <th class="text-center">4</th>
                 <td>WHATEVER FRIEND YOU CHOOSE</td>
                 <td>1</td>
                 <td>9</td>
@@ -118,7 +118,7 @@
                 <td>27.4</td>
             </tr>
             <tr>
-                <th>3</th>
+                <th class="text-center">3</th>
                 <td>IN BETWEEN OBSTACLES</td>
                 <td>29</td>
                 <td>12</td>
@@ -126,7 +126,7 @@
                 <td>14.6</td>
             </tr>
             <tr>
-                <th>2</th>
+                <th class="text-center">2</th>
                 <td>AFRAID OF NO ONE</td>
                 <td>26</td>
                 <td>15</td>
@@ -134,7 +134,7 @@
                 <td>21.2</td>
             </tr>
             <tr>
-                <th>1</th>
+                <th class="text-center">1</th>
                 <td>RELENTLESS 7</td>
                 <td>22</td>
                 <td>19</td>
@@ -142,7 +142,7 @@
                 <td>17.9</td>
             </tr>
             <tr>
-                <th>0</th>
+                <th class="text-center">0</th>
                 <td>FREE FALL</td>
                 <td>15</td>
                 <td>19</td>
@@ -151,25 +151,25 @@
             </tr>
         </tbody>
     </table>
-                 <table class="table table-hover text-center">
+                 <table class="table table-hover">
         <thead>
             <hr>
-            <h2 class="intro-text text-center">
+            <h2 class="intro-text">
                         <strong>Domestic Competitions</strong>
                     </h2>
             <hr>
             <tr>
-                <th>#</th>
-                <th>GAME</th>
-                <th>PLACE</th>
-                <th>SCORE</th>
-                <th>RUNS</th>
-                <th>POINTS</th>
+                <th class="text-center">#</th>
+                <th class="text-center">GAME</th>
+                <th class="text-center">PLACE</th>
+                <th class="text-center">SCORE</th>
+                <th class="text-center">RUNS</th>
+                <th class="text-center">POINTS</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>7</th>
+                <th class="text-center">7</th>
                 <td>RUN FOR THE TOP</td>
                 <td>41</td>
                 <td>0</td>
@@ -177,7 +177,7 @@
                 <td>43</td>
             </tr>
             <tr>
-                <th>6</th>
+                <th class="text-center">6</th>
                 <td>RACE OR DIE</td>
                 <td>40</td>
                 <td>4</td>
@@ -185,7 +185,7 @@
                 <td>41</td>
             </tr>
             <tr>
-                <th>5</th>
+                <th class="text-center">5</th>
                 <td>TRY OR FLY</td>
                 <td>37</td>
                 <td>6</td>
@@ -193,7 +193,7 @@
                 <td>39</td>
             </tr>
             <tr>
-                <th>4</th>
+                <th class="text-center">4</th>
                 <td>NO RULES APPLY</td>
                 <td>32</td>
                 <td>9</td>
@@ -201,7 +201,7 @@
                 <td>36</td>
             </tr>
             <tr>
-                <th>3</th>
+                <th class="text-center">3</th>
                 <td>GET OUT AND ABOUT</td>
                 <td>29</td>
                 <td>12</td>
@@ -209,7 +209,7 @@
                 <td>30</td>
             </tr>
             <tr>
-                <th>2</th>
+                <th class="text-center">2</th>
                 <td>NO MORE MR NICE CABLERACER</td>
                 <td>26</td>
                 <td>15</td>
@@ -217,7 +217,7 @@
                 <td>28</td>
             </tr>
             <tr>
-                <th>1</th>
+                <th class="text-center">1</th>
                 <td>SNOWLESS UPHILL RUN</td>
                 <td>22</td>
                 <td>19</td>
@@ -225,7 +225,7 @@
                 <td>23</td>
             </tr>
             <tr>
-                <th>0</th>
+                <th class="text-center">0</th>
                 <td>POINT OF NO RETURN</td>
                 <td>15</td>
                 <td>19</td>
@@ -234,25 +234,25 @@
             </tr>
         </tbody>
     </table>
-     <table class="table table-hover text-center">
+     <table class="table table-hover">
         <thead>
             <hr>
-            <h2 class="intro-text text-center">
+            <h2 class="intro-text">
                         <strong>International Championships</strong>
                     </h2>
             <hr>
             <tr>
-                <th>#</th>
-                <th>GAME</th>
-                <th>PLACE</th>
-                <th>SCORE</th>
-                <th>RUNS</th>
-                <th>POINTS</th>
+                <th class="text-center">#</th>
+                <th class="text-center">GAME</th>
+                <th class="text-center">PLACE</th>
+                <th class="text-center">SCORE</th>
+                <th class="text-center">RUNS</th>
+                <th class="text-center">POINTS</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>7</th>
+                <th class="text-center">7</th>
                 <td>FIVE MINUTES FROM THE POLE</td>
                 <td>39</td>
                 <td>2</td>
@@ -260,7 +260,7 @@
                 <td>41</td>
             </tr>
             <tr>
-                <th>6</th>
+                <th class="text-center">6</th>
                 <td>OVER THE POND</td>
                 <td>37</td>
                 <td>3</td>
@@ -268,7 +268,7 @@
                 <td>40</td>
             </tr>
             <tr>
-                <th>5</th>
+                <th class="text-center">5</th>
                 <td>THE GREAT SILK CABLEWAY</td>
                 <td>30</td>
                 <td>9</td>
@@ -276,7 +276,7 @@
                 <td>32</td>
             </tr>
             <tr>
-                <th>4</th>
+                <th class="text-center">4</th>
                 <td>AMERICAN EXPRESS</td>
                 <td>29</td>
                 <td>11</td>
@@ -284,7 +284,7 @@
                 <td>31</td>
             </tr>
             <tr>
-                <th>3</th>
+                <th class="text-center">3</th>
                 <td>NORTHERN UPRISAL</td>
                 <td>23</td>
                 <td>15</td>
@@ -292,7 +292,7 @@
                 <td>26</td>
             </tr>
             <tr>
-                <th>2</th>
+                <th class="text-center">2</th>
                 <td>NO CABLES FOR THE TIE-IN</td>
                 <td>18</td>
                 <td>19</td>
@@ -300,7 +300,7 @@
                 <td>23</td>
             </tr>
             <tr>
-                <th>1</th>
+                <th class="text-center">1</th>
                 <td>IMPLAUSIBLE BATTLE</td>
                 <td>16</td>
                 <td>23</td>
@@ -308,7 +308,7 @@
                 <td>18</td>
             </tr>
             <tr>
-                <th>0</th>
+                <th class="text-center">0</th>
                 <td>THE PENULTIMATE CONUNDRUM</td>
                 <td>13</td>
                 <td>33</td>
@@ -319,7 +319,7 @@
     </table>
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
+                    <h2 class="intro-text">About
                         <strong>Ottawa's Cableway Racing League</strong>
                     </h2>
                     <hr>
@@ -327,7 +327,7 @@
                 <div class="col-md-6">
                     <img class="img-responsive img-border-left" src="../img/slide-2.jpg" alt="">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 text-left">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                     <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
