--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/main.css" rel="stylesheet">
 
     <!-- Fonts -->
-    <script src="//use.edgefonts.net/questrial;prosto-one;quantico.js"></script>
+    <script src="//use.edgefonts.net/questrial;quantico;prosto-one.js"></script>
 
 </head>
 
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             
-            <div class="navbar-header">
+            <div class="navbar-header visible-xs">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -74,7 +74,7 @@
                         <small>Simply the Best</small>
                     </h2>
                     <h1 class="brand-name">World's Cableway Racing League: Canadian Division</h1>
-                    <hr class="tagline-divider">
+                    <hr>
                     <h2>
                         <small>Competion Year
                             <strong>77</strong>
