--- a/pages/signup.html
+++ b/pages/signup.html
@@ -18,7 +18,7 @@
     <link href="../css/main.css" rel="stylesheet">
 
     <!-- Fonts -->
-    <script src="//use.edgefonts.net/questrial;prosto-one;quantico.js"></script>
+    <script src="//use.edgefonts.net/questrial;quantico;prosto-one.js"></script>
     
 </head>
 
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             
-            <div class="navbar-header">
+            <div class="navbar-header visible-xs">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
